add video not supported text

--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,8 @@
 
             <div class="gallery-video">
                 <video src="/assets/video/IMG_7450.MOV" aria-label="this is a video" controls id="imapal-video">
+                    Your browser doesn't support vide
+                </video>
             </div>
 
             <div id="gallery-text">
@@ -50,9 +52,9 @@
                 <p>Namibia is know to be one of the most beautiful places on earth!
                     <br>
                     Many internationally recoginized
-                    photographers visit Namibia for this very reason. 
-                    <br> 
-                    It is worth noting that no picture can capture the true beauty of Namibia, but for now, 
+                    photographers visit Namibia for this very reason.
+                    <br>
+                    It is worth noting that no picture can capture the true beauty of Namibia, but for now,
                     <br>
                     enjoy these pictures by Inotila Nghaamwa thatshow some of the gems that Namibia has to offer.
             </div>
@@ -63,30 +65,40 @@
                     <div class="row">
                         <img src="assets/images/Webp.net-resizeimage (1).jpg" alt="a rhino in the wild">
                         <img src="assets/images/Webp.net-resizeimage (2).jpg" alt="pale chanting goshawk on a branch ">
-                        <img src="assets/images/Webp.net-resizeimage (3).jpg" alt="henya and a girrafe dronking at the waterhole">
+                        <img src="assets/images/Webp.net-resizeimage (3).jpg"
+                            alt="henya and a girrafe dronking at the waterhole">
                     </div>
                     <div class="row">
-                        <img src="assets/images/Webp.net-resizeimage (4).jpg" alt=" two cheetahs walking in long grass with Zebra's in the background">
-                        <img src="assets/images/Webp.net-resizeimage (5).jpg" alt="local himbaa women walking home with their childeren">
+                        <img src="assets/images/Webp.net-resizeimage (4).jpg"
+                            alt=" two cheetahs walking in long grass with Zebra's in the background">
+                        <img src="assets/images/Webp.net-resizeimage (5).jpg"
+                            alt="local himbaa women walking home with their childeren">
                         <img src="assets/images/Webp.net-resizeimage (6).jpg" alt="a spider on it's web">
                     </div>
 
                     <div class="row">
                         <img src="assets/images/Webp.net-resizeimage (7).jpg" alt="spring-bok at the waterwhole">
-                        <img src="assets/images/Webp.net-resizeimage (8).jpg" alt="a rhino standing in etosha national park">
-                        <img src="assets/images/Webp.net-resizeimage (9).jpg" alt="wild animals gathered at a waterhole">
+                        <img src="assets/images/Webp.net-resizeimage (8).jpg"
+                            alt="a rhino standing in etosha national park">
+                        <img src="assets/images/Webp.net-resizeimage (9).jpg"
+                            alt="wild animals gathered at a waterhole">
                     </div>
 
                     <div class="row">
-                        <img src="assets/images/Webp.net-resizeimage (10).jpg" alt="a baby girrafe drinking water while a predator looks on">
-                        <img src="assets/images/Webp.net-resizeimage (11).jpg" alt="spring-bok and a heyna look at each other">
+                        <img src="assets/images/Webp.net-resizeimage (10).jpg"
+                            alt="a baby girrafe drinking water while a predator looks on">
+                        <img src="assets/images/Webp.net-resizeimage (11).jpg"
+                            alt="spring-bok and a heyna look at each other">
                         <img src="assets/images/Webp.net-resizeimage (15).jpg" alt="a herd of oryx eating grass">
                     </div>
 
                     <div class="row">
-                        <img src="assets/images/Webp.net-resizeimage (13).jpg" alt="spring-bok and a heyna look at each other">
-                        <img src="assets/images/Webp.net-resizeimage (14).jpg" alt="the sunsets behind moauntains in Windhoek">
-                        <img src="assets/images/Webp.net-resizeimage.jpg" alt="a rhino standing in etosha national park">
+                        <img src="assets/images/Webp.net-resizeimage (13).jpg"
+                            alt="spring-bok and a heyna look at each other">
+                        <img src="assets/images/Webp.net-resizeimage (14).jpg"
+                            alt="the sunsets behind moauntains in Windhoek">
+                        <img src="assets/images/Webp.net-resizeimage.jpg"
+                            alt="a rhino standing in etosha national park">
                     </div>
                 </div>
 
