--- a/book.html
+++ b/book.html
@@ -38,7 +38,7 @@
 
     <section class="booking-page">
         
-        <div class="booking-image">
+        <div id="booking-image" class="hero-image">
             <img src="/assets/images/Webp.net-resizeimage (1).jpg" alt="" id="shuttle-image">
         </div>
         <div class="booking-form">
