--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 
     <section id="home-page">
 
-        <div id="home-image">
+        <div id="home-image" class="hero-image">
             <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
                 alt="a picture of a rhino standing in the wild">
         </div>
 
-        <div id="about-namibia-text">
+        <div id="about-namibia-text" class="hero-text">
             <h2>About Namibia</h2>
             <p>Namibia is a country in the southwest of Africa and is known as one of the worlds most popular travel
                 destinations! This amazing country has plenty of history, which can be seen every where you go. With a
@@ -62,7 +62,7 @@
                 <br>
                 <a href="book.html">Book</a> your trip today!</p>
 
-            <div id="weather" class="home-details">
+            <div id="weather" class="hero-details">
                 <h2>Typical weather</h2>
                 <p> Ave Temperature: 30º C</p>
                 <br>
@@ -71,7 +71,7 @@
                 <p>Mostly Sunny</p>
             </div>
 
-            <div id="time" class="home-details">
+            <div id="time" class="hero-details">
                 <h2>Best time to visit</h2>
                 <p>Month: December/January</p>
                 <br>
@@ -80,7 +80,7 @@
                 <p>NB! every season comes with its own gems</p>
             </div>
 
-            <div id="location" class="home-details">
+            <div id="location" class="hero-details">
                 <h2>Location</h2>
                 <p> Coordinates: 22.9576° S, 18.4904° E</p>
                 <br>
@@ -88,7 +88,6 @@
                 <br>
                 <p>Region: SADC </p>
             </div>
-        </div>
         </div>
 
     </section>
