add code simplification

--- a/book.html
+++ b/book.html
@@ -39,9 +39,9 @@
     <section class="booking-page">
         
         <div id="booking-image" class="hero-image">
-            <img src="/assets/images/Webp.net-resizeimage (1).jpg" alt="" id="shuttle-image">
+            <img src="./assets/images/Webp.net-resizeimage (1).jpg" alt="a rhino in the wild" id="shuttle-image">
         </div>
-        <div class="booking-form">
+        <div id="booking-form">
             <div id="shuttle-booking-form">
                 <h2>Book your airport shuttle today!</h2>
                 <p>We offer affordable and reliable transport to and from the Hosea Kutako International airport</p>
