--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="home-page">
 
         <div id="home-image" class="hero-image">
-            <img src="/assets/images/Webp.net-resizeimage.jpg" id="main-image"
+            <img src="./assets/images/Webp.net-resizeimage.jpg" id="main-image"
                 alt="a picture of a rhino standing in the wild">
         </div>
 
