add divs for content

--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         </nav>
     </header>
 
-    <!-- image and about section  -->
-
+    <!-- home page content  -->
+    <div class="hero-banner">Hero image</div>
+    <div id="welcoming text">Text</div>
+    <div id="links_to_other_pages">Links to other pages</div>
     
-
     <footer>
         <ul class="social-networks">
             <li>
