add divs for booking form and their IDs for CSS styling

--- a/book.html
+++ b/book.html
@@ -35,6 +35,8 @@
             </ul>
         </nav>
     </header>
+<div id="bookinf-form-container">Form</div>
+<div id="booking-image">Car Image</div>
 
     <footer>
         <ul class="social-networks">
