add div with id for gallery photos

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
     </header>
 
     <!-- gallery page  -->
-    
+    <div id="gallery_photo-container">gallery photos</div>
 
     <footer>
         <ul class="social-networks">
