add divs for about namibia, renamed attractions to about namibia, change header links to about namibia

--- a/namibia.html
+++ b/namibia.html
@@ -24,7 +24,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="attractions.html" class="active">Attractions</a>
+                    <a href="namibia.html" class="active">About Namibia</a>
                 </li>
                 <li>
                     <a href="book.html">Book</a>
@@ -35,7 +35,9 @@
             </ul>
         </nav>
     </header>
+<div id="about_nam_banner" class="hero-banner"></div>
 
+<div>Text about Namibia</div>
     <footer>
         <ul class="social-networks">
             <li>
