--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
                     <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
-                    <a href="attractions.html">Attractions</a>
+                    <a href="namibia.html" class="active">About Namibia</a>
                 </li>
                 <li>
                     <a href="book.html">Book</a>
