remove active class for about namibia on pages except about namibia page

--- a/book.html
+++ b/book.html
@@ -24,7 +24,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="namibia.html" class="active">About Namibia</a>
+                    <a href="namibia.html">About Namibia</a>
                 </li>
                 <li>
                     <a href="book.html" class="active">Book</a>
