--- a/namibia.html
+++ b/namibia.html
@@ -16,7 +16,7 @@
     <!-- logo and navigation menu  -->
     <header>
         <a href="index.html">
-            <h1 id="logo">Visit Namibia</h1>
+            <h1 id="logo">Alchemist Namibia</h1>
         </a>
         <nav>
             <ul id="nav-menu">
