--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Visit Namibia a website for people who are planning on visiting Namibia">
+    <meta name="description" content="Alchemist tours a website for an airport shuttle company in Namibia">
     <meta name="keywords" content="Namibia, travel, tourist, Africa, Safari, airport shuttle, flights">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Visit Namibia</title>
+    <title>Alchemist Tours</title>
 </head>
 
 <body>
     <!-- logo and navigation menu  -->
     <header>
         <a href="index.html">
-            <h1 id="logo">Alchemist Namibia</h1>
+            <h1 id="logo">Alchemist Tours</h1>
         </a>
         <nav>
             <ul id="nav-menu">
