--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 
     <!-- home page content  -->
-    <div class="hero-banner">Hero image</div>
+    <div class="hero-banner"></div>
     <div id="welcoming text">Text</div>
     <div id="links_to_other_pages">Links to other pages</div>
     
