add banner image to book.html

--- a/book.html
+++ b/book.html
@@ -35,6 +35,7 @@
             </ul>
         </nav>
     </header>
+    <div class="hero-banner"></div>
 <div id="bookinf-form-container">Form</div>
 <div id="booking-image">Car Image</div>
 
