add text for landing page

--- a/index.html
+++ b/index.html
@@ -38,9 +38,19 @@
 
     <!-- home page content  -->
     <div class="hero-banner"></div>
-    <div id="welcoming text">Text</div>
+    <div id="welcoming text">
+        <h1>Welcome to Alchemist Tours</h1>
+        <p>​ Your Namibian adventure has begun! Alchemist Tours and Transfers is a Namibia's most dynamic transportation company. We offer
+            firstclass services, and constantly bring innovation to the transportation industry. 
+            <br>
+            We specialize in transportation to and from Winhoek international airport and the general area of Windhoek. ​
+            We are here to meet and surpass your transportation needs, and this starts with us understanding exactly
+            what you would like, from details such as the type of music you would like, to any other special needs you
+            might have even those that are not transport related, we are here to ensure your trip is exactly how you
+            pictured it.</p>
+    </div>
     <div id="links_to_other_pages">Links to other pages</div>
-    
+
     <footer>
         <ul class="social-networks">
             <li>
