add text and style to text on home page

--- a/index.html
+++ b/index.html
@@ -38,16 +38,24 @@
 
     <!-- home page content  -->
     <div class="hero-banner"></div>
-    <div id="welcoming text">
+    <div id="welcoming_text">
         <h1>Welcome to Alchemist Tours</h1>
-        <p>​ Your Namibian adventure has begun! Alchemist Tours and Transfers is a Namibia's most dynamic transportation company. We offer
-            firstclass services, and constantly bring innovation to the transportation industry. 
+        <p>​ Your Namibian adventure has begun! Alchemist Tours is Namibia's most dynamic transportation company.
             <br>
-            We specialize in transportation to and from Winhoek international airport and the general area of Windhoek. ​
+            Offering firstclass shuttle services, and constantly paving the way for innovation in the transportation industry. 
+            <br>
+            We specialize in transportation to and from Winhoek international airport and the general area of Windhoek.
+            ​<br>
             We are here to meet and surpass your transportation needs, and this starts with us understanding exactly
-            what you would like, from details such as the type of music you would like, to any other special needs you
-            might have even those that are not transport related, we are here to ensure your trip is exactly how you
-            pictured it.</p>
+            what you would like.
+            <br>
+            From details such as the type of music you would like, to any other special needs you
+            might have even those that are not transport related.
+            <br> 
+            We are here to ensure your trip is exactly how you
+            pictured it.
+            <br>
+            <a href="./book.html">Book</a> your trip with us today!</p>
     </div>
     <div id="links_to_other_pages">Links to other pages</div>
 
