--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <h1>Welcome to Alchemist Tours</h1>
         <p>​ Your Namibian adventure has begun! Alchemist Tours is Namibia's most dynamic transportation company.
             <br>
-            Offering firstclass shuttle services, and constantly paving the way for innovation in the transportation industry. 
+            Offering firstclass shuttle services, and constantly paving the way for innovation in the transportation
+            industry. 
             <br>
             We specialize in transportation to and from Winhoek international airport and the general area of Windhoek.
             ​<br>
@@ -51,13 +52,17 @@
             <br>
             From details such as the type of music you would like, to any other special needs you
             might have even those that are not transport related.
-            <br> 
+            <br>
             We are here to ensure your trip is exactly how you
             pictured it.
             <br>
             <a href="./book.html">Book</a> your trip with us today!</p>
     </div>
-    <div id="links_to_other_pages">Links to other pages</div>
+    <div id="links_to_other_pages">
+        <div id="right_contianer" class="link_container"><h3>ABOUT NAMIBIA</h3></div>
+        <div id="center_contianer" class="link_container"><h3>BOOK <br> SHUTTLE</h3></div>
+        <div id="left_contianer" class="link_container"><h3>VIEW <br>  GALLERY</h3></div>
+    </div>
 
     <footer>
         <ul class="social-networks">
