add anchor to links in container

--- a/index.html
+++ b/index.html
@@ -59,9 +59,15 @@
             <a href="./book.html">Book</a> your trip with us today!</p>
     </div>
     <div id="links_to_other_pages">
-        <div id="right_contianer" class="link_container"><h3>ABOUT NAMIBIA</h3></div>
-        <div id="center_contianer" class="link_container"><h3>BOOK <br> SHUTTLE</h3></div>
-        <div id="left_contianer" class="link_container"><h3>VIEW <br>  GALLERY</h3></div>
+        <div id="right_contianer" class="link_container"> <a href="./namibia.html">
+                <h3>ABOUT NAMIBIA</h3>
+            </a></div>
+        <div id="center_contianer" class="link_container"> <a href="./book.html"> <h3>BOOK <br> SHUTTLE</h3></a>
+           
+        </div>
+        <div id="left_contianer" class="link_container"> <a href="./gallery.html">
+                <h3>VIEW <br> GALLERY</h3>
+            </a></div>
     </div>
 
     <footer>
