remove about part in the about namibia title

--- a/book.html
+++ b/book.html
@@ -24,7 +24,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="namibia.html">About Namibia</a>
+                    <a href="namibia.html">Namibia</a>
                 </li>
                 <li>
                     <a href="book.html" class="active">Book</a>
@@ -35,7 +35,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero-banner"></div>
+     <div class="hero-banner"></div>
 <div id="bookinf-form-container">Form</div>
 <div id="booking-image">Car Image</div>
 
