--- a/namibia.html
+++ b/namibia.html
@@ -24,7 +24,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="namibia.html" class="active">About Namibia</a>
+                    <a href="namibia.html" class="active">Namibia</a>
                 </li>
                 <li>
                     <a href="book.html">Book</a>
