add image and style

--- a/book.html
+++ b/book.html
@@ -65,8 +65,8 @@
             <br>
             <button type="submit">Book Transport</button>
         </form>
+        <img src="./assets/images/Webp.net-resizeimage (14).jpg" alt="a sun sets over Windhoek" id="booking-image">
     </div>
-    <div id="booking-image">Car Image</div>
 
     <footer>
         <ul class="social-networks">
