add style and text field

--- a/book.html
+++ b/book.html
@@ -63,6 +63,10 @@
             <br>
             <input type="street" id="drop-off" name="drop_off_street" placeholder="Hiton Hotel, Sam Nujoma Ave" required>
             <br>
+            <label for="request">Additional request:</label>
+            <br>
+            <input type="text" id="request" name="client-request" placeholder="Special request ,e.g. Type of music">
+            <br>
             <button type="submit">Book Transport</button>
         </form>
         <img src="./assets/images/Webp.net-resizeimage (14).jpg" alt="a sun sets over Windhoek" id="booking-image">
