add text and styling

--- a/book.html
+++ b/book.html
@@ -36,7 +36,16 @@
         </nav>
     </header>
     <div class="hero-banner"></div>
+    <div id="booking-text">
+        <h2>Book your shuttle below</h2>
+        <p>Fill in your details blow
+            <br>
+            and book your shuttle
+            <br>
+            or simple get a price quotation for your trip</p>
+    </div>
     <div id="booking-form-container">
+
         <form action="reserver.shuttle" method="POST" class="client-details">
             <label for="name">Enter Name:</label>
             <br>
@@ -57,11 +66,13 @@
             <br>
             <label for="pick-up">Pick-up address:</label>
             <br>
-            <input type="street" id="pick-up" name="pick-up-location" placeholder="Windhoek International Airport" required>
+            <input type="street" id="pick-up" name="pick-up-location" placeholder="Windhoek International Airport"
+                required>
             <br>
             <label for="drop-off">Drop-off address:</label>
             <br>
-            <input type="street" id="drop-off" name="drop_off_street" placeholder="Hiton Hotel, Sam Nujoma Ave" required>
+            <input type="street" id="drop-off" name="drop_off_street" placeholder="Hiton Hotel, Sam Nujoma Ave"
+                required>
             <br>
             <label for="request">Additional request:</label>
             <br>
