add details about why to book and what page is about.

--- a/book.html
+++ b/book.html
@@ -38,11 +38,10 @@
     <div class="hero-banner"></div>
     <div id="booking-text">
         <h2>Book your shuttle below</h2>
-        <p>Fill in your details blow
+        <p>Fill in your details blow and book your shuttle or simple get a price quotation for your trip.
             <br>
-            and book your shuttle
-            <br>
-            or simple get a price quotation for your trip</p>
+            Explore the wonders of Windhoek safely and affordably with us!
+        </p>
     </div>
     <div id="booking-form-container">
 
