--- a/namibia.html
+++ b/namibia.html
@@ -40,10 +40,23 @@
     <div id="about-namibia-text">
         <h2>About Namibia</h2>
         <p>Namibia Is a beautiful country in the South West of Africa. With a population of only 2.5 million people,
-            Namibia has one of the smallest population densities in the world. With a wide range of cultures many languages are spoken in Namibia, with English as the formal languege. While Namibia is known for it's rich history, it's even more popular for its diverse landscape and wildlife. Visit our gallery to view some of the gems Namibia has to offer, but no camera can do Namibia justice, come see it for yourself! Typically Namibia is a hot country, so bring plent of sunblock and summer clothes. However, the winter get cold, so be wary of the seasons. More than anything else,Namibian has the friendliest people on earth, and we at Alchemist Namibia look forward to welcoming you!  </p>
+            Namibia has one of the smallest population densities in the world.
+            <br>
+            With a wide range of cultures many languages are spoken in Namibia, with English as the formal languege.
+            <br>
+            While Namibia is known for it's rich
+            history, it's even more popular for its diverse landscape and wildlife. Visit our gallery to view some of
+            the gems Namibia has to offer, <br>
+            but it's best if you come see it for yourself! No camera can capature the true beauty of Namibia.
+            <br> Typically Namibia is a hot country, so bring plent of sunblock and summer clothes. However, the winter
+            can get very cold, so be
+            wary of the seasons.
+            <br>
+            More than anything else,Namibian has the friendliest people on earth, and we at
+            Alchemist Namibia look forward to welcoming you! </p>
     </div>
     <div id="about-namibia-image">
-        <img src="./assets/images/Webp.net-resizeimage (5).jpg" alt="a sun sets over Windhoek" id="Namibia-image">
+        <img src="./assets/images/Webp.net-resizeimage (5).jpg" alt="a sun sets over Windhoek" id="namibia-image">
     </div>
     <footer>
         <ul class="social-networks">
