add text and style to about namibia, and alt text to img

--- a/namibia.html
+++ b/namibia.html
@@ -52,12 +52,9 @@
             can get very cold, so be
             wary of the seasons.
             <br>
-            More than anything else,Namibian has the friendliest people on earth, and we at
-            Alchemist Namibia look forward to welcoming you! </p>
+            More than anything else,Namibian has the friendliest people on earth, and we look forward to welcoming you! </p>
     </div>
-    <div id="about-namibia-image">
-        <img src="./assets/images/Webp.net-resizeimage (5).jpg" alt="a sun sets over Windhoek" id="namibia-image">
-    </div>
+        <img src="./assets/images/Webp.net-resizeimage (5).jpg" alt="two Himba mothers take walk hand in hand with their children" id="namibia-image">
     <footer>
         <ul class="social-networks">
             <li>
