add banner div to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
             </ul>
         </nav>
     </header>
+    <div id="about_nam_banner" class="hero-banner"></div>
 
     <!-- gallery page  -->
     <div id="gallery_photo-container">gallery photos</div>
