--- a/book.html
+++ b/book.html
@@ -45,7 +45,7 @@
     </div>
     <div id="booking-form-container">
 
-        <form action="reserver.shuttle" method="POST" class="client-details">
+        <form action="thanks.html" method="POST" class="client-details">
             <label for="name">Enter Name:</label>
             <br>
             <input type="text" id="name" name="passenger_name" placeholder="Happy Traveler" required>
@@ -77,7 +77,7 @@
             <br>
             <input type="text" id="request" name="client-request" placeholder="Special request ,e.g. Type of music">
             <br>
-            <button type="submit">Book Transport</button>
+            <a href="./thanks.html"><button type="submit">Book Transport</button></a>
         </form>
         <img src="./assets/images/Webp.net-resizeimage (14).jpg" alt="a sun sets over Windhoek" id="booking-image">
     </div>
