add text to home page to make the content more simple

--- a/index.html
+++ b/index.html
@@ -40,19 +40,10 @@
     <div class="hero-banner"></div>
     <div id="welcoming_text">
         <h1>Welcome to Alchemist Tours</h1>
-        <p>​ Your Namibian adventure has begun! Alchemist Tours is Namibia's most dynamic transportation company.
+        <p>​Alchemist Tours is Namibia's most dynamic transportation company.
             <br>
-            Offering firstclass shuttle services, and constantly paving the way for innovation in the transportation
-            industry. 
-            <br>
-            We specialize in transportation to and from Winhoek international airport and the general area of Windhoek.
+            We offer firstclass shuttle services.
             ​<br>
-            We are here to meet and surpass your transportation needs, and this starts with us understanding exactly
-            what you would like.
-            <br>
-            From details such as the type of music you would like, to any other special needs you
-            might have even those that are not transport related.
-            <br>
             We are here to ensure your trip is exactly how you
             pictured it.
             <br>
@@ -62,8 +53,10 @@
         <div id="right_contianer" class="link_container"> <a href="./namibia.html">
                 <h3>ABOUT NAMIBIA</h3>
             </a></div>
-        <div id="center_contianer" class="link_container"> <a href="./book.html"> <h3>BOOK <br> SHUTTLE</h3></a>
-           
+        <div id="center_contianer" class="link_container"> <a href="./book.html">
+                <h3>BOOK <br> SHUTTLE</h3>
+            </a>
+
         </div>
         <div id="left_contianer" class="link_container"> <a href="./gallery.html">
                 <h3>VIEW <br> GALLERY</h3>
