add text to about namibia, and link to trip advisor

--- a/namibia.html
+++ b/namibia.html
@@ -39,22 +39,24 @@
 
     <div id="about-namibia-text">
         <h2>About Namibia</h2>
-        <p>Namibia Is a beautiful country in the South West of Africa. With a population of only 2.5 million people,
-            Namibia has one of the smallest population densities in the world.
+        <p> Namibia has one of the smallest population densities in the world,with only 2.5 million people.
             <br>
-            With a wide range of cultures many languages are spoken in Namibia, with English as the formal languege.
+            With a wide range of cultures many languages are spoken in Namibia, and English is the formal one.
             <br>
-            While Namibia is known for it's rich
-            history, it's even more popular for its diverse landscape and wildlife. Visit our gallery to view some of
-            the gems Namibia has to offer, <br>
-            but it's best if you come see it for yourself! No camera can capature the true beauty of Namibia.
-            <br> Typically Namibia is a hot country, so bring plent of sunblock and summer clothes. However, the winter
-            can get very cold, so be
-            wary of the seasons.
+            Namibia is known for it's rich
+            history, diverse landscape and wildlife. 
             <br>
-            More than anything else,Namibian has the friendliest people on earth, and we look forward to welcoming you! </p>
+            Visit our <a href="gallery.html">gallery </a> and 
+            <a href="https://www.tripadvisor.com/Attraction_Review-g293821-d18195776-Reviews-Alchemist_Tours_and_Transfers-Windhoek_Khomas_Region.html"
+                target="_blank">Trip Advisor</a> page to expierence our excursions.
+            <br> Typically hot and sunny country, bring plenty of sunblock. However, the winter
+            can get very cold.
+            <br>
+            More than anything else,Namibian has the friendliest people on earth, and we look forward to welcoming you!
+        </p>
     </div>
-        <img src="./assets/images/Webp.net-resizeimage (5).jpg" alt="two Himba mothers take walk hand in hand with their children" id="namibia-image">
+    <img src="./assets/images/Webp.net-resizeimage (5).jpg"
+        alt="two Himba mothers take walk hand in hand with their children" id="namibia-image">
     <footer>
         <ul class="social-networks">
             <li>
