add text to about namibia

--- a/namibia.html
+++ b/namibia.html
@@ -43,8 +43,8 @@
             <br>
             With a wide range of cultures many languages are spoken in Namibia, and English is the formal one.
             <br>
-            Namibia is known for it's rich
-            history, diverse landscape and wildlife. 
+            Namibia has rich
+            history and a large biodiversity. 
             <br>
             Visit our <a href="gallery.html">gallery </a> and 
             <a href="https://www.tripadvisor.com/Attraction_Review-g293821-d18195776-Reviews-Alchemist_Tours_and_Transfers-Windhoek_Khomas_Region.html"
