add text to about namibia

--- a/namibia.html
+++ b/namibia.html
@@ -52,7 +52,7 @@
             <br> Typically hot and sunny country, bring plenty of sunblock. However, the winter
             can get very cold.
             <br>
-            More than anything else,Namibian has the friendliest people on earth, and we look forward to welcoming you!
+            Namibian has the friendliest people on earth, and we look forward to welcoming you!
         </p>
     </div>
     <img src="./assets/images/Webp.net-resizeimage (5).jpg"
