--- a/thanks.html
+++ b/thanks.html
@@ -30,7 +30,7 @@
                     <a href="book.html">Book</a>
                 </li>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
