add style and edit text for spelling mistake in booking page

--- a/book.html
+++ b/book.html
@@ -38,7 +38,7 @@
     <div class="hero-banner"></div>
     <div id="booking-text">
         <h2>Book your shuttle below</h2>
-        <p>Fill in your details blow and book your shuttle or simple get a price quotation for your trip.
+        <p>Fill in your details below and book your shuttle or simple get a price quotation for your trip.
             <br>
             Explore the wonders of Windhoek safely and affordably with us!
         </p>
