--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div id="links_to_other_pages">
         <div id="right_contianer" class="link_container"> <a href="./namibia.html">
-                <h3>ABOUT NAMIBIA</h3>
+                <h3>ABOUT <br> NAMIBIA</h3>
             </a></div> 
         <div id="center_contianer" class="link_container"> <a href="./book.html">
                 <h3>BOOK <br> SHUTTLE</h3>
