add text to correct errors in spelling

--- a/book.html
+++ b/book.html
@@ -40,7 +40,7 @@
         <h2>Book your shuttle below</h2>
         <p>Fill in your details below and book your shuttle or simple get a price quotation for your trip.
             <br>
-            Explore the wonders of Windhoek safely and affordably with us!
+            Explore the wonders of Windhoek with us!
         </p>
     </div>
     <div id="booking-form-container">
@@ -59,16 +59,16 @@
             <input type="number" id="number_of_passengers" name="number_of_passengers" placeholder="4" min="1" max="11"
                 required>
             <br>
-            <label for="date">Pick-up time:</label>
+            <label for="date">Pick up time:</label>
             <br>
             <input type="datetime-local" id="date" name="passenger_pickup_time" placeholder="" required>
             <br>
-            <label for="pick-up">Pick-up address:</label>
+            <label for="pick-up">Pick up address:</label>
             <br>
             <input type="street" id="pick-up" name="pick-up-location" placeholder="Windhoek International Airport"
                 required>
             <br>
-            <label for="drop-off">Drop-off address:</label>
+            <label for="drop-off">Drop off address:</label>
             <br>
             <input type="street" id="drop-off" name="drop_off_street" placeholder="Hiton Hotel, Sam Nujoma Ave"
                 required>
