--- a/namibia.html
+++ b/namibia.html
@@ -43,12 +43,12 @@
             <br>
             With a wide range of cultures many languages are spoken in Namibia, and English is the formal one.
             <br>
-            Namibia has richchistory and a large biodiversity. 
+            Namibia has rich history and a large biodiversity. 
             <br>
             Visit our <a href="gallery.html">gallery </a> and 
             <a href="https://www.tripadvisor.com/Attraction_Review-g293821-d18195776-Reviews-Alchemist_Tours_and_Transfers-Windhoek_Khomas_Region.html"
-                target="_blank">Trip Advisor</a> page to expierence our excursions.
-            <br> Typically hot and sunny country, bring plenty of sunblock. However, the winter
+                target="_blank">Trip Advisor</a> page to experience our excursions.
+            <br> Typically hot and sunny country, bring plenty of sun block. However, the winter
             can get very cold.
             <br>
             Namibian has the friendliest people on earth, and we look forward to welcoming you!
