update img names

--- a/book.html
+++ b/book.html
@@ -79,7 +79,7 @@
             <br>
             <a href="./thanks.html"><button type="submit">Book Transport</button></a>
         </form>
-        <img src="./assets/images/Webp.net-resizeimage (14).jpg" alt="a sun sets over Windhoek" id="booking-image">
+        <img src="./assets/images/windhoek-sunset.jpg" alt="a sun sets over Windhoek" id="booking-image">
     </div>
 
     <footer>
