--- a/namibia.html
+++ b/namibia.html
@@ -54,7 +54,7 @@
             Namibian has the friendliest people on earth, and we look forward to welcoming you!
         </p>
     </div>
-    <img src="./assets/images/Webp.net-resizeimage (5).jpg"
+    <img src="./assets/images/himba.jpg"
         alt="two Himba mothers take walk hand in hand with their children" id="namibia-image">
     <footer>
         <ul class="social-networks">
