--- a/gallery.html
+++ b/gallery.html
@@ -40,16 +40,16 @@
     <!-- gallery page  -->
     <div id="gallery_photo-container"> 
         <div class="row">
-            <img src="assets/images/Webp.net-resizeimage (1).jpg" alt="a rhino in the wild">
-            <img src="assets/images/Webp.net-resizeimage (2).jpg" alt="pale chanting goshawk on a branch ">
-            <img src="assets/images/Webp.net-resizeimage (3).jpg"
-                alt="henya and a girrafe dronking at the waterhole">
+            <img src="assets/images/wildlife-rhino.jpg" alt="a rhino in the wild">
+            <img src="assets/images/wildlife-hawk.jpg" alt="pale chanting goshawk on a branch ">
+            <img src="assets/images/wildlife-girrafe.jpg"
+                alt="henya and a girrafe drinking at the waterhole">
      
-            <img src="assets/images/Webp.net-resizeimage (4).jpg"
+            <img src="assets/images/wildlife-cheetah.jpg"
                 alt=" two cheetahs walking in long grass with Zebra's in the background">
-            <img src="assets/images/Webp.net-resizeimage (5).jpg"
+            <img src="assets/images/himba.jpg"
                 alt="local himbaa women walking home with their childeren">
-            <img src="assets/images/Webp.net-resizeimage (6).jpg" alt="a spider on it's web">
+            <img src="assets/images/wildlife-spider.jpg" alt="a spider on it's web">
         
             <img src="assets/images/Webp.net-resizeimage (7).jpg" alt="spring-bok at the waterwhole">
             <img src="assets/images/Webp.net-resizeimage (8).jpg"
