update img link cause of name change

--- a/gallery.html
+++ b/gallery.html
@@ -51,23 +51,23 @@
                 alt="local himbaa women walking home with their childeren">
             <img src="assets/images/wildlife-spider.jpg" alt="a spider on it's web">
         
-            <img src="assets/images/Webp.net-resizeimage (7).jpg" alt="spring-bok at the waterwhole">
-            <img src="assets/images/Webp.net-resizeimage (8).jpg"
+            <img src="assets/images/wildlife-buck.jpg" alt="spring-bok at the waterwhole">
+            <img src="assets/images/wildlife-rhino1.jpg"
                 alt="a rhino standing in etosha national park">
-            <img src="assets/images/Webp.net-resizeimage (9).jpg"
+            <img src="assets/images/wildlife-waterhole.jpg"
                 alt="wild animals gathered at a waterhole">
   
-            <img src="assets/images/Webp.net-resizeimage (10).jpg"
+            <img src="assets/images/wildlife-girrafe.jpg"
                 alt="a baby girrafe drinking water while a predator looks on">
-            <img src="assets/images/Webp.net-resizeimage (11).jpg"
+            <img src="assets/images/wildlife-buck1.jpg"
                 alt="spring-bok and a heyna look at each other">
-            <img src="assets/images/Webp.net-resizeimage (15).jpg" alt="a herd of oryx eating grass">
+            <img src="assets/images/wildlife-oryx.jpg" alt="a herd of oryx eating grass">
        
-            <img src="assets/images/Webp.net-resizeimage (13).jpg"
+            <img src="assets/images/wildlife-buck3.jpg"
                 alt="spring-bok and a heyna look at each other">
-            <img src="assets/images/Webp.net-resizeimage (14).jpg"
+            <img src="assets/images/windhoek-sunset.jpg"
                 alt="the sunsets behind moauntains in Windhoek">
-            <img src="assets/images/Webp.net-resizeimage.jpg"
+            <img src="assets/images/wildlife-rhino2.jpg"
                 alt="a rhino standing in etosha national park">
         </div>
     </div>
