update type to an allowed type

--- a/book.html
+++ b/book.html
@@ -65,12 +65,12 @@
             <br>
             <label for="pick-up">Pick up address:</label>
             <br>
-            <input type="street" id="pick-up" name="pick-up-location" placeholder="Windhoek International Airport"
+            <input type="text" id="pick-up" name="pick-up-location" placeholder="Windhoek International Airport"
                 required>
             <br>
             <label for="drop-off">Drop off address:</label>
             <br>
-            <input type="street" id="drop-off" name="drop_off_street" placeholder="Hiton Hotel, Sam Nujoma Ave"
+            <input type="text" id="drop-off" name="drop_off_street" placeholder="Hiton Hotel, Sam Nujoma Ave"
                 required>
             <br>
             <label for="request">Additional request:</label>
