--- a/book.html
+++ b/book.html
@@ -45,7 +45,7 @@
     </div>
     <div id="booking-form-container">
 
-        <form action="thanks.html" method="get" class="client-details">
+        <form action="thanks.html" method="post" class="client-details">
             <label for="name">Enter Name:</label>
             <br>
             <input type="text" id="name" name="passenger_name" placeholder="Happy Traveler" required>
