--- a/book.html
+++ b/book.html
@@ -61,7 +61,7 @@
             <br>
             <label for="date">Pick up time:</label>
             <br>
-            <input type="datetime-local" id="date" name="passenger_pickup_time" placeholder="" required>
+            <input type="number" id="date" name="passenger_pickup_time" placeholder="" required>
             <br>
             <label for="pick-up">Pick up address:</label>
             <br>
