--- a/book.html
+++ b/book.html
@@ -58,7 +58,7 @@
                 </div>
                 
                 <div class="form-div">
-                    <label for="number_of_passengers">No of Passengers:</label>
+                    <label for="number_of_passengers">Passengers:</label>
                 <input type="number" id="number_of_passengers" name="number_of_passengers" placeholder="4" min="1"
                     max="11" required>
                 </div>
