--- a/book.html
+++ b/book.html
@@ -89,8 +89,9 @@
                 </div>
               
                 <div class="form-div">
-                    <button type="submit">Book Transport</button></fieldset>
+                    <button type="submit">Book Transport</button>
                 </div>
+            </fieldset>
         </form>
     </div>
 
